@@ -20,6 +20,7 @@ version 3.0.0 (??/??/????):
 	  using GnuTLS. (elrond, belmyst, and Mark Doliner) (#8061)
 	* Don't allow SSL 3.0 (only TLS 1.0 and newer) for TLS connections when
 	  using either GnuTLS or NSS.
+	* Install a purple-url-handler file to handle protocol schemes on Linux.
 
 	Pidgin:
 	* Support building with the GTK+ 3.x toolkit.  When configuring the
